# esp32s3-sandbox

mesh_lite_sample/: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
mesh_lite_sample/front/web-demo/site/: index.html
mesh_lite_sample/front/web-demo/site/css/: chunk-vendors.3de0d1d9.css
mesh_lite_sample/front/web-demo/site/js/: app.9357878e.js  app.9357878e.js.map  chunk-vendors.8bbb8f88.js.map
mesh_lite_sample/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  local_control.c  rest_server.c
mesh_lite_sample_no_router/: REST-Project-1-soapui-project.xml  sdkconfig.defaults
mesh_lite_sample_no_router/front/web-demo/site/: index.html
mesh_lite_sample_no_router/front/web-demo/site/js/: chunk-vendors.8bbb8f88.js
mesh_lite_sample_no_router/front/web/site/: index.html
mesh_lite_sample_no_router/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  no_router.c
restful_server/: .gitignore  README.md
restful_server/main/: idf_component.yml
softap_and_sta/: sdkconfig  sdkconfig.defaults
softap_and_sta/main/: softap_sta.c
wifi_router/: .gitignore
wifi_router/main/: idf_component.yml
